<resources>
    <string name="app_name">WallRose</string>

    <string name="tabbar_chat">聊天</string>
    <string name="tabbar_profile">我的</string>

    <string name="chatinput_placeholder">请输入内容开始聊天</string>
    <string name="profile_chat_history">聊天历史</string>
    <string name="profile_logout">退出登录</string>
    <string name="profile_new_chat">开始新聊天</string>
    <string name="send">发送</string>
    <string name="voice">语音输入</string>
    <string name="back_to_app">回到app</string>
    <string name="hide">隐藏</string>
    <string name="float_hint">请输入并开始聊天</string>
</resources>